--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,7 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
+            app:tabMode="scrollable"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             app:tabIndicatorColor="@android:color/darker_gray" />
