--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -14,12 +14,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:padding="20dp">
+        android:paddingLeft="20dp"
+        android:paddingTop="15dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/comment_user_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="40dp"
             android:src="@drawable/m"/>
 
         <LinearLayout
@@ -28,6 +30,8 @@
             android:orientation="vertical"
             android:layout_marginStart="20dp"
             >
+
+
 
             <TextView
                 android:id="@+id/comment_user_name"
@@ -54,7 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="10dp">
+                    android:padding="5dp">
 
                     <TextView
                         android:id="@+id/comment_message_text"
@@ -64,9 +68,6 @@
                         android:textColor="@android:color/white"
                         android:textSize="16dp"
                         android:paddingBottom="5dp"/>
-
-
-
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
