--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,11 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorAccent"
-    android:padding="20dp"
+    android:background="@drawable/backgroundwelcome"
     >
 
+
     <LinearLayout
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -16,9 +17,13 @@
 
 
         <TextView
+            android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Chose photo"
+            android:textColor="@color/white"
+            android:alpha="0.5"
+            android:fontFamily="@font/bold"
             android:textSize="20dp"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -34,6 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Your Name"
+            android:textColorHint="@color/white"
+            android:alpha="0.5"
             android:textColor="@android:color/white"
 
             android:inputType="text"
@@ -43,6 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
+            android:textColorHint="@color/white"
+            android:alpha="0.5"
             android:inputType="textEmailAddress"
             android:layout_marginBottom="20dp"/>
         <EditText
@@ -50,6 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
+            android:textColorHint="@color/white"
+            android:alpha="0.5"
             android:inputType="textPassword"
             android:layout_marginBottom="20dp"/>
         <EditText
@@ -57,6 +68,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Confirm password"
+            android:textColorHint="@color/white"
+            android:alpha="0.5"
             android:inputType="textPassword"
             android:layout_marginBottom="10dp"/>
         <EditText
@@ -64,6 +77,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Your Mobile"
+            android:textColorHint="@color/white"
+            android:alpha="0.5"
             android:inputType="phone"
             android:layout_marginBottom="10dp"/>
 
@@ -72,16 +87,49 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Address"
+            android:textColorHint="@color/white"
+            android:alpha="0.5"
             android:inputType="textPostalAddress"
             android:layout_marginBottom="20dp"/>
 
 
-        <Button
-            android:id="@+id/register_register_btn"
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register"/>
+            app:cardBackgroundColor="@color/white"
+            android:alpha="0.7"
+            app:cardMaxElevation="250dp"
+            android:layout_margin="2dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="6dp"
+            >
+            <TextView
+                android:id="@+id/register_register_btn"
+                android:layout_width="match_parent"
+                android:text="Register"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:padding="10dp"
+                android:textColor="@color/blackTextColor"
+                android:layout_height="wrap_content"
+                />
 
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/white"
+            android:text="By Signing up, i agree to Jobaki's"
+            android:layout_marginTop="20dp"/>
+        <TextView
+            android:id="@+id/terms_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Terms And Conditions"
+            android:textStyle="bold"
+            android:textColor="@color/like"/>
     </LinearLayout>
 
 
