--- a/app/src/main/res/layout/item_chat_message.xml
+++ b/app/src/main/res/layout/item_chat_message.xml
@@ -15,9 +15,7 @@
         app:cardMaxElevation="250dp"
         android:layout_margin="20dp"
         app:cardCornerRadius="15dp"
-        app:cardElevation="6dp"
-
-        >
+        app:cardElevation="6dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
