--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -8,11 +8,14 @@
     android:layout_marginBottom="5dp">
 
 <LinearLayout
+    android:id="@+id/user_info_linear"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:clickable="true"
+    android:focusable="true">
 
 <de.hdodenhof.circleimageview.CircleImageView
     android:id="@+id/post_user_image"
@@ -50,12 +53,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/demo"
+        android:textColor="@android:color/black"
+        android:textSize="17dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:ellipsize="end"
-        android:maxLines="4"/>
+        android:maxLines="2"/>
 
     <ImageView
         android:id="@+id/post_image"
@@ -125,18 +130,7 @@
             android:focusable="true"
             android:clickable="true"/>
 
-        <TextView
-            android:id="@+id/post_share"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="share"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:drawableStart="@drawable/ic_screen_share_black_24dp"
-            android:drawableTint="@color/dislike"
-            android:focusable="true"
-            android:clickable="true"/>
+
 
     </LinearLayout>
      <View
