--- a/app/src/main/res/layout/item_users.xml
+++ b/app/src/main/res/layout/item_users.xml
@@ -35,13 +35,55 @@
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
                 android:textSize="16dp"/>
-            <TextView
-                android:id="@+id/user_address"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Greece"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/user_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Greece"
+                    />
+                <TextView
+                    android:id="@+id/message_filed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="message"
+                    android:visibility="gone"
+                    />
+
+
+                <ImageView
+                    android:id="@+id/users_seen_two"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/seen"
+                    android:tint="@color/like"
+                    android:visibility="gone"
+                    />
+
+                <ImageView
+                    android:id="@+id/users_seen_one"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_check_black_24dp"
+                    android:tint="@android:color/darker_gray"
+                    android:visibility="gone"/>
+            </LinearLayout>
 
         </LinearLayout>
+
+
+        <TextView
+            android:layout_marginStart="100dp"
+            android:id="@+id/users_time_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3 m ago..."
+            android:textColor="@android:color/black"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
