--- a/app/src/main/res/layout/shape_view.xml
+++ b/app/src/main/res/layout/shape_view.xml
@@ -6,11 +6,18 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/shape_card"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="20dp"
-        app:cardUseCompatPadding="true"
-        app:cardElevation="3dp"
-        android:layout_margin="20sp"/>
+        app:cardBackgroundColor="@color/colorAccent"
+        app:cardMaxElevation="250dp"
+        android:layout_margin="20dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="6dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hellooooooo"
+            android:textSize="50dp"/>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
