--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -1,24 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="@color/colorAccent"
+    android:background="@drawable/backgroundwelcome"
     android:padding="60dp">
 
 
-    <Button
-        android:id="@+id/welcome_login_btn"
-        android:layout_width="match_parent"
-        android:text="Login"
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"/>
-    <Button
-        android:id="@+id/welcome_register_btn"
+        android:text="Welcome"
+        android:textColor="@color/white"
+        android:fontFamily="@font/nizar"
+
+        android:textSize="50sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nice to see you again..."
+        android:textColor="@color/white"
+        android:fontFamily="@font/nizar"
+        android:alpha="0.5"
+        android:textSize="16sp"/>
+
+    <LinearLayout
+
         android:layout_width="match_parent"
-        android:text="register"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/pink"
+            app:cardMaxElevation="250dp"
+            android:layout_margin="2dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="6dp"
+            >
+            <TextView
+                android:id="@+id/welcome_login_btn"
+                android:layout_width="match_parent"
+                android:text="Login"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:padding="10dp"
+                android:textColor="@color/white"
+                android:layout_height="wrap_content"
+                />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/pink"
+            app:cardMaxElevation="250dp"
+            android:layout_marginTop="15dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="6dp"
+            >
+            <TextView
+                android:id="@+id/welcome_register_btn"
+                android:layout_width="match_parent"
+                android:text="Register"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:padding="10dp"
+                android:textColor="@color/white"
+                android:layout_height="wrap_content"
+                />
+
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/forgetEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forget Email or Password"
+            android:layout_marginTop="20dp"
+            android:textSize="17sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:focusable="true" />
+
+    </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
 
 </LinearLayout>
