--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:backgroundTint="@android:color/white"
-    android:background="@android:color/darker_gray"
-    android:layout_marginBottom="5dp">
+    android:background="@android:color/darker_gray">
 
 
     <LinearLayout
@@ -14,68 +13,113 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:paddingLeft="20dp"
-        android:paddingTop="15dp">
+        android:paddingStart="20dp"
+        android:paddingTop="14dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/comment_user_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginBottom="40dp"
+
             android:src="@drawable/m"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginStart="20dp"
             >
 
 
-
-            <TextView
-                android:id="@+id/comment_user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Karim Keldek"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:textSize="16dp"/>
-
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:id="@+id/comment_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/colorPrimaryDark"
-                app:cardMaxElevation="250dp"
-                android:layout_margin="20dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="6dp"
+                android:orientation="vertical"
+                android:layout_margin="10dp"
+                android:padding="7dp"
+                android:background="@drawable/speech_bubble_nine_patch_agent"
+                android:backgroundTint="@color/lightGray">
 
-                >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="5dp">
+                    >
+                    <TextView
+                        android:id="@+id/comment_user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Karim Keldek"
+                        android:textStyle="bold"
+                        android:paddingBottom="10dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp"/>
 
                     <TextView
                         android:id="@+id/comment_message_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Hello Hello Hello Hello Hello "
-                        android:textColor="@android:color/white"
-                        android:textSize="16dp"
-                        android:paddingBottom="5dp"/>
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp"
+                        android:ellipsize="end"
+                        android:maxLines="2"
+                        />
+
+
 
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
-            <TextView
-                android:id="@+id/comment_time"
+
+
+            </LinearLayout>
+
+
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="30 m ago "/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/comment_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="30 m ago "/>
+
+                <TextView
+                    android:id="@+id/comment_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" Love"
+                    android:padding="10dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:drawableStart="@drawable/ic_heart"
+                    android:drawableTint="@color/dislike"
+                    android:focusable="true"
+                    android:clickable="true"
+                    />
+
+                <TextView
+                    android:id="@+id/comment_count_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="  Love"
+                    android:padding="10dp"
+                    android:layout_marginLeft="50dp"
+                    android:drawableStart="@drawable/ic_heart"
+                    android:drawableTint="@color/dislike"
+                    android:focusable="true"
+                    android:clickable="true"
+                    android:visibility="visible"
+                    />
+
+            </LinearLayout>
+
+
+
+
 
         </LinearLayout>
 
