--- a/app/src/main/res/layout/item_chat_message.xml
+++ b/app/src/main/res/layout/item_chat_message.xml
@@ -7,21 +7,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/chat_card"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorAccent"
-        app:cardMaxElevation="250dp"
-        android:layout_margin="20dp"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="6dp">
+
 
         <LinearLayout
+            android:id="@+id/receiver_linear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_margin="10dp"
+            android:padding="7dp"
+            android:background="@drawable/speech_bubble_nine_patch_agent">
 
             <TextView
                 android:id="@+id/chat_message_text"
@@ -29,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:text="Hello"
                 android:textColor="@android:color/white"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:paddingBottom="5dp"/>
 
             <LinearLayout
@@ -67,6 +62,7 @@
 
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
+
 
 </LinearLayout>
