--- a/app/src/main/res/layout/item_users.xml
+++ b/app/src/main/res/layout/item_users.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:padding="20dp">
+        android:padding="10dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
@@ -29,29 +29,27 @@
 
             <TextView
                 android:id="@+id/user_name"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Karim Keldek"
+                android:text=""
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textSize="16dp"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:id="@+id/user_address"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/user_lastMessage"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:text="Greece"
-                    />
-                <TextView
-                    android:id="@+id/message_filed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="message"
-                    android:visibility="gone"
+                    android:text=""
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     />
 
 
@@ -77,13 +75,15 @@
 
 
         <TextView
+            android:gravity="end"
             android:layout_marginStart="100dp"
             android:id="@+id/users_time_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3 m ago..."
+            android:text=""
+            android:textSize="11sp"
             android:textColor="@android:color/black"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
     </LinearLayout>
 
