--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,18 +7,34 @@
     <color name="white">#E7EAEA</color>
     <color name="like">#03A9F4</color>
     <color name="dislike">#888888</color>
-    <color name="green">#408743</color>
+    <color name="lightGray">#EFF0F2</color>
+    <color name="green">#4D9F51</color>
     <color name="orange">#B58E54</color>
     <color name="pink">#92D83559</color>
     <color name="strongpink">#FDA5B9</color>
     <color name="darkGray">#A41C2B3B</color>
 
     <!--colors for profile-->
-    <color name="profilePrimaryDark">#FF3B30</color>
+    <color name="profilePrimaryDark">#DAA80901</color>
     <color name="profileAccentColor">#F7F7F7</color>
     <color name="whiteTextColor">#fff</color>
     <color name="profileBackground">#fff</color>
     <color name="blackTextColor">#000</color>
     <color name="profileEditTextColor">#707070</color>
+
+
+
+
+
+
+
+    <color name="speech_bubble_user">#148968</color>
+    <color name="speech_bubble_agent">#189dae</color>
+
+
+    <color name="outside_color_trans">#00000000</color>
+    <color name="outside_color_gray">#66444444</color>
+    <color name="outside_color_dark_gray">#66303030</color>
+    <color name="outside_color_pink">#66E7b8f1</color>
 
 </resources>
